--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="video-section">
     <div class="tutorial-video">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/rotY9lLZzl8?modestbranding=1" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/2Tz2mrEHORU?modestbranding=1" allowfullscreen></iframe>
     </div>
 
     <div class="compile-avatar-button">
