--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="compile-avatar-button">
-      <button id="enterButton" class="compile-button">Compile Item</button>
+      <a href="https://www.youtube.com" target="_blank" id="enterButton" class="compile-button">Compile Item</a>
     </div>
   </div>
 
